# bevy_vox_mesh

./: Cargo.toml  README.md
assets/: eggs.vox  materials.vox  roads.vox
examples/: basic.rs
examples/render/: main.rs
src/: lib.rs  loader.rs  material.rs  mesh.rs  scene.rs
