[package]
name = "bevy_vox_mesh"
description = "A bevy engine plugin for loading magica voxel files directly in bevy as usable meshes."
license = "MIT"
version = "0.3.0"
repository = "https://github.com/Game4all/bevy_vox_mesh"
authors = ["Lucas A. <game4allyt@gmail.com>", "Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
edition = "2021"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
dot_vox = "4.1.0"
ndshape = "0.2.0"
block-mesh = { version = "0.1.0", git = "https://github.com/bonsairobo/block-mesh-rs", rev = "ade165f2247a3bd847a44c46ae6f7c70976e46cc" }
ndcopy = "0.2.0"
anyhow = "1.0.38"
num-integer = "0.1"

[dev-dependencies]
bevy = "0.7"

[[example]]
name = "render"
path = "examples/render/main.rs"